# Smart-Energy-Advisor-

./: README.md  app.py  pyproject.toml  replit.md
data/: appliance_data.csv  sample_bill.txt
pages/: 1_Home.py  2_Analysis.py  3_Suggestions.py  4_About.py
utils/: analyze_data.py  extract_data.py  visualize.py
