[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "plotly>=6.4.0",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
]
